--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tailwindcss": "^3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-carousel": "^0.1.40",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
