--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@heroicons/vue": "^1.0.6",
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
+    "firebase": "^8.2.1",
+    "firebase-tools": "^9.1.0",
+    "mosha-vue-toastify": "^1.0.23",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
