--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.6.1",
     "@heroicons/vue": "^1.0.6",
+    "@vueup/vue-quill": "^1.0.0-beta.8",
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
     "firebase": "^8.2.1",
